--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist",
   "types": "dist",
   "repository": {
-      "type": "git",
-      "url": "https://github.com/apiel/electribe-core"
+    "type": "git",
+    "url": "https://github.com/apiel/electribe-core"
   },
   "author": "Alexandre Piel <alexandre.piel@gmail.com>",
   "license": "UNLICENSED",
@@ -14,10 +14,13 @@
     "prepublish": "npm run build",
     "dev": "ts-node-dev example/main.ts",
     "clean": "rimraf dist",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "midi": "^2.0.0",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
